--- a/src/app/components/Overview/Squash/Squash.scss
+++ b/src/app/components/Overview/Squash/Squash.scss
@@ -7,6 +7,7 @@
   align-items: flex-end;
   bottom: calc(60% + 7vw);
   left: 55%;
+  z-index: 1;
 
   @media (min-width: 500px) {
     bottom: calc(18% + 7vw);
