--- a/src/app/pages/FAQ/FAQ.scss
+++ b/src/app/pages/FAQ/FAQ.scss
@@ -15,7 +15,6 @@
   }
 
   @media (min-width: $mobile-breakpoint) {
-    overflow: hidden;
     h2 {
       margin-bottom: calc($main-padding-mobile-block);
     }
@@ -55,6 +54,7 @@
       gap: 10%;
       bottom: -5%;
       width: calc(100% - 2 * $main-padding-desktop-inline);
+      z-index: 1;
 
       .apricot {
         transform: rotate(-10deg);
