--- a/src/app/pages/Landing/Landing.scss
+++ b/src/app/pages/Landing/Landing.scss
@@ -44,10 +44,10 @@
   .add-me-to-cart {
     margin-inline: auto;
     width: 80%;
-    max-width: 400px;
+    max-width: 300px;
     color: $primary-white;
     background-color: $primary-black;
-    padding-block: 20px;
+    padding-block: 15px;
     transition: background-color 0.3s;
     border: 2px solid $primary-black;
     border-radius: 5px;
